--- a/index.html
+++ b/index.html
@@ -346,8 +346,8 @@
         const pepeContainer = document.getElementById('pepeContainer');
         const clickCountDisplay = document.getElementById('clickCount');
         
-        const closedMouthImg = 'https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/683235c182b2956a91a2763b_a.png';
-        const openMouthImg = 'https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/683235c1127062351dc86729_QmQcTQFZXS8NxDmgs33EshVmANWVxKC1soXxhNp97MHLDm.png';
+        const closedMouthImg = 'https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/68325d9ee42a265d3d447c66_QmSgzvg2thRGdK1sQGuZB5TQuWuG7ukjJiEhSBw4155zxQ.png';
+        const openMouthImg = 'https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/68325d9e2a880357f93d4e40_QmSgzvg2thRGdK1sQGuZB5TQuWuG7ukjJiEhSBw4155zxQ%20(1).png';
 
         // Initialize Firebase Auth
         async function initFirebaseAuth() {
