--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>POPPEPE</title>
+    <title>SPANKDAFROG</title>
     <link rel="icon" type="image/png" href="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/683235c1127062351dc86729_QmQcTQFZXS8NxDmgs33EshVmANWVxKC1soXxhNp97MHLDm.png">
     <link rel="shortcut icon" type="image/png" href="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/683235c1127062351dc86729_QmQcTQFZXS8NxDmgs33EshVmANWVxKC1soXxhNp97MHLDm.png">
     
@@ -261,7 +261,7 @@
     </a>
 
     <div class="header">
-        <h1 class="title">POPPEPE</h1>
+        <h1 class="title">SPANKDAFROG</h1>
         <div class="counter">
             Clicks: <span id="clickCount">0</span>
         </div>
