--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
     </style>
 </head>
 <body>
-    <a href="https://pump.fun/coin/3jrro94oW9S8A6zaEKLhdpG8kiUUmABoJfVntjKSpump" target="_blank" class="pump-fun-button">
+    <a href="https://pump.fun" target="_blank" class="pump-fun-button">
         <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/67e09302ce2c79cb6daaebcc_Pump_fun_logo%20(2).png" 
              alt="Pump.fun" 
              class="pump-fun-logo">
