--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SPANKDAFROG</title>
-    <link rel="icon" type="image/png" href="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/683235c1127062351dc86729_QmQcTQFZXS8NxDmgs33EshVmANWVxKC1soXxhNp97MHLDm.png">
-    <link rel="shortcut icon" type="image/png" href="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/683235c1127062351dc86729_QmQcTQFZXS8NxDmgs33EshVmANWVxKC1soXxhNp97MHLDm.png">
+    <link rel="icon" type="image/png" href="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/68325e17fc1466a06b6baa21_QmSgzvg2thRGdK1sQGuZB5TQuWuG7ukjJiEhSBw4155zxQ.gif">
+    <link rel="shortcut icon" type="image/png" href="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/68325e17fc1466a06b6baa21_QmSgzvg2thRGdK1sQGuZB5TQuWuG7ukjJiEhSBw4155zxQ.gif">
     
     <!-- Firebase SDK -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.23.0/firebase-app-compat.min.js"></script>
