--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SPANKFROGdotCLICK</title>
+    <title>FROG SPANKER 500</title>
     <link rel="icon" type="image/png" href="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/68325e17fc1466a06b6baa21_QmSgzvg2thRGdK1sQGuZB5TQuWuG7ukjJiEhSBw4155zxQ.gif">
     <link rel="shortcut icon" type="image/png" href="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/68325e17fc1466a06b6baa21_QmSgzvg2thRGdK1sQGuZB5TQuWuG7ukjJiEhSBw4155zxQ.gif">
     
