--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     <video autoplay muted loop id="bg-video" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: -1;">
         <source src="https://res.cloudinary.com/drizfkvpy/video/upload/v1748131548/AdobeStock_609189287_kjamke.mp4" type="video/mp4">
     </video>
-    <a href="https://pump.fun/" target="_blank" class="pump-fun-button">
+    <a href="https://pump.fun/coin/HHM6LqxcuGwtHMciPdchwBRfvG6oQLtkmJdAoUZ9pump" target="_blank" class="pump-fun-button">
         <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/67e09302ce2c79cb6daaebcc_Pump_fun_logo%20(2).png" 
              alt="Pump.fun" 
              class="pump-fun-logo">
