--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FROG SPANKER 500</title>
+    <title>PIGSPANKER5000</title>
     <link rel="icon" type="image/png" href="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/68325e17fc1466a06b6baa21_QmSgzvg2thRGdK1sQGuZB5TQuWuG7ukjJiEhSBw4155zxQ.gif">
     <link rel="shortcut icon" type="image/png" href="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/68325e17fc1466a06b6baa21_QmSgzvg2thRGdK1sQGuZB5TQuWuG7ukjJiEhSBw4155zxQ.gif">
     
@@ -257,7 +257,7 @@
     <video autoplay muted loop id="bg-video" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: -1;">
         <source src="https://res.cloudinary.com/drizfkvpy/video/upload/v1748131548/AdobeStock_609189287_kjamke.mp4" type="video/mp4">
     </video>
-    <a href="https://pump.fun/coin/HHM6LqxcuGwtHMciPdchwBRfvG6oQLtkmJdAoUZ9pump" target="_blank" class="pump-fun-button">
+    <a href="https://pump.fun/" target="_blank" class="pump-fun-button">
         <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/67e09302ce2c79cb6daaebcc_Pump_fun_logo%20(2).png" 
              alt="Pump.fun" 
              class="pump-fun-logo">
@@ -349,8 +349,8 @@
         const pepeContainer = document.getElementById('pepeContainer');
         const clickCountDisplay = document.getElementById('clickCount');
         
-        const closedMouthImg = 'https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/68325d9ee42a265d3d447c66_QmSgzvg2thRGdK1sQGuZB5TQuWuG7ukjJiEhSBw4155zxQ.png';
-        const openMouthImg = 'https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/68325d9e2a880357f93d4e40_QmSgzvg2thRGdK1sQGuZB5TQuWuG7ukjJiEhSBw4155zxQ%20(1).png';
+        const closedMouthImg = 'https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/6838f1d0ebfa1c9d536970bb_251351bcff1738971e9e2e00ae75980d%20(1).png';
+        const openMouthImg = 'https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/6838f1d08627c596c530ce24_251351bcff1738971e9e2e00ae75980d.png';
 
         // Initialize Firebase Auth
         async function initFirebaseAuth() {
