--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 
     <div class="game-container">
         <div class="pepe-container" id="pepeContainer">
-            <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/68325d9ee42a265d3d447c66_QmSgzvg2thRGdK1sQGuZB5TQuWuG7ukjJiEhSBw4155zxQ.png" 
+            <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/6838f1d0ebfa1c9d536970bb_251351bcff1738971e9e2e00ae75980d%20(1).png" 
                  alt="Pepe" 
                  class="pepe-image" 
                  id="pepeImage">
