--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     </a>
 
     <div class="header">
-        <h1 class="title">SPANKDAFROG</h1>
+        <h1 class="title">PIGSPANKER5000</h1>
         <div class="counter">
             Clicks: <span id="clickCount">0</span>
         </div>
