--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PIGSPANKER5000</title>
+    <title>POPDUCK</title>
     <link rel="icon" type="image/png" href="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/68325e17fc1466a06b6baa21_QmSgzvg2thRGdK1sQGuZB5TQuWuG7ukjJiEhSBw4155zxQ.gif">
     <link rel="shortcut icon" type="image/png" href="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/68325e17fc1466a06b6baa21_QmSgzvg2thRGdK1sQGuZB5TQuWuG7ukjJiEhSBw4155zxQ.gif">
     
@@ -257,14 +257,14 @@
     <video autoplay muted loop id="bg-video" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: -1;">
         <source src="https://res.cloudinary.com/drizfkvpy/video/upload/v1748131548/AdobeStock_609189287_kjamke.mp4" type="video/mp4">
     </video>
-    <a href="https://pump.fun/coin/SQcZ5TduLJiiorPg84EnfdmbLCb3i4Vhj71RHsVpump" target="_blank" class="pump-fun-button">
+    <a href="https://pump.fun" target="_blank" class="pump-fun-button">
         <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/67e09302ce2c79cb6daaebcc_Pump_fun_logo%20(2).png" 
              alt="Pump.fun" 
              class="pump-fun-logo">
     </a>
 
     <div class="header">
-        <h1 class="title">PIGSPANKER5000</h1>
+        <h1 class="title">POPDUCK</h1>
         <div class="counter">
             Clicks: <span id="clickCount">0</span>
         </div>
@@ -272,7 +272,7 @@
 
     <div class="game-container">
         <div class="pepe-container" id="pepeContainer">
-            <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/6838f1d0ebfa1c9d536970bb_251351bcff1738971e9e2e00ae75980d%20(1).png" 
+            <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/683f5787f9707f702ca0457d_200w%20(1)%20(1).png" 
                  alt="Pepe" 
                  class="pepe-image" 
                  id="pepeImage">
@@ -349,8 +349,8 @@
         const pepeContainer = document.getElementById('pepeContainer');
         const clickCountDisplay = document.getElementById('clickCount');
         
-        const closedMouthImg = 'https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/6838f1d0ebfa1c9d536970bb_251351bcff1738971e9e2e00ae75980d%20(1).png';
-        const openMouthImg = 'https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/6838f1d08627c596c530ce24_251351bcff1738971e9e2e00ae75980d.png';
+        const closedMouthImg = 'https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/683f5787f9707f702ca0457d_200w%20(1)%20(1).png';
+        const openMouthImg = 'https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/683f5787468620cdf86dc24a_200w%20(1).png';
 
         // Initialize Firebase Auth
         async function initFirebaseAuth() {
