--- a/index.html
+++ b/index.html
@@ -263,6 +263,13 @@
              class="pump-fun-logo">
     </a>
 
+    <a href="https://x.com/i/communities/1930017216692646115" target="_blank" class="social-button">
+    <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/6838de5fb56905c169669b27_61w1Q5OxE2L%20(1).png" 
+         alt="Twitter" 
+         class="social-logo">
+</a>
+    
+
     <div class="header">
         <h1 class="title">POPDUCK</h1>
         <div class="counter">
