--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
              class="pump-fun-logo">
     </a>
 
-    <a href="https://twitter.com/yourhandle" target="_blank" class="pump-fun-button" style="right: 120px;">
+    <a href="https://x.com/i/communities/1930019621437919438" target="_blank" class="pump-fun-button" style="right: 120px;">
     <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/6838de5fb56905c169669b27_61w1Q5OxE2L%20(1).png" 
          alt="Twitter" 
          class="pump-fun-logo">
