--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 
     <div class="game-container">
         <div class="pepe-container" id="pepeContainer">
-            <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/683f5787f9707f702ca0457d_200w%20(1)%20(1).png" 
+            <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/683f7964e286d0f5ec1edd4f_XUJTdd67_400x400.png" 
                  alt="Pepe" 
                  class="pepe-image" 
                  id="pepeImage">
@@ -357,8 +357,8 @@
         const pepeContainer = document.getElementById('pepeContainer');
         const clickCountDisplay = document.getElementById('clickCount');
         
-        const closedMouthImg = 'https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/683f5787f9707f702ca0457d_200w%20(1)%20(1).png';
-        const openMouthImg = 'https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/683f5787468620cdf86dc24a_200w%20(1).png';
+        const closedMouthImg = 'https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/683f7964e286d0f5ec1edd4f_XUJTdd67_400x400.png';
+        const openMouthImg = 'https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/683f79739c8223313238dede_XUJTdd67_400x400%20(2).png';
 
         // Initialize quack audio
         function initQuackAudio() {
