--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>POPDUCK</title>
-    <link rel="icon" type="image/png" href="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/683f58fcf40fb091edd9ea44_200w%20(1).gif">
-    <link rel="shortcut icon" type="image/png" href="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/683f58fcf40fb091edd9ea44_200w%20(1).gif">
+    <title>PUNCH ALON</title>
+    <link rel="icon" type="image/png" href="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/683f79739c8223313238dede_XUJTdd67_400x400%20(2).png">
+    <link rel="shortcut icon" type="image/png" href="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/683f79739c8223313238dede_XUJTdd67_400x400%20(2).png">
     
     <!-- Firebase SDK -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.23.0/firebase-app-compat.min.js"></script>
@@ -257,13 +257,13 @@
     <video autoplay muted loop id="bg-video" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: -1;">
         <source src="https://res.cloudinary.com/drizfkvpy/video/upload/v1748131548/AdobeStock_609189287_kjamke.mp4" type="video/mp4">
     </video>
-    <a href="https://pump.fun/coin/5fuwi449jV1gUbAhN41kkooionzSh8h5cukGHmx7pump" target="_blank" class="pump-fun-button">
+    <a href="https://pump.fun" target="_blank" class="pump-fun-button">
         <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/67e09302ce2c79cb6daaebcc_Pump_fun_logo%20(2).png" 
              alt="Pump.fun" 
              class="pump-fun-logo">
     </a>
 
-    <a href="https://x.com/i/communities/1930019621437919438" target="_blank" class="pump-fun-button" style="right: 120px;">
+    <a href="https://x.com/" target="_blank" class="pump-fun-button" style="right: 120px;">
     <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/6838de5fb56905c169669b27_61w1Q5OxE2L%20(1).png" 
          alt="Twitter" 
          class="pump-fun-logo">
@@ -271,7 +271,7 @@
     
 
     <div class="header">
-        <h1 class="title">POPDUCK</h1>
+        <h1 class="title">PUNCH ALON</h1>
         <div class="counter">
             Clicks: <span id="clickCount">0</span>
         </div>
