--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
 
         // Initialize quack audio
         function initQuackAudio() {
-            quackAudio = new Audio('https://raw.githubusercontent.com/webdevgf1/poppepe/main/Quack%20Sound%20Effect.mp3');
+            quackAudio = new Audio('https://raw.githubusercontent.com/webdevgf1/poppepe/main/punch.mp3');
             quackAudio.preload = 'auto';
             quackAudio.volume = 0.5;
         }
