--- a/index.html
+++ b/index.html
@@ -257,13 +257,13 @@
     <video autoplay muted loop id="bg-video" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: -1;">
         <source src="https://res.cloudinary.com/dk4bbapud/video/upload/v1748990767/videoplayback_2_t90xh2.mp4" type="video/mp4">
     </video>
-    <a href="https://pump.fun" target="_blank" class="pump-fun-button">
+    <a href="https://pump.fun/coin/2PqA61KP1Sqgg7xVUzKD5NitYpF2ADHoPHrmDm8jpump" target="_blank" class="pump-fun-button">
         <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/67e09302ce2c79cb6daaebcc_Pump_fun_logo%20(2).png" 
              alt="Pump.fun" 
              class="pump-fun-logo">
     </a>
 
-    <a href="https://x.com/" target="_blank" class="pump-fun-button" style="right: 120px;">
+    <a href="https://x.com/i/communities/1930034442459840860" target="_blank" class="pump-fun-button" style="right: 120px;">
     <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/6838de5fb56905c169669b27_61w1Q5OxE2L%20(1).png" 
          alt="Twitter" 
          class="pump-fun-logo">
