--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PUNCH ALON</title>
-    <link rel="icon" type="image/png" href="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/683f79739c8223313238dede_XUJTdd67_400x400%20(2).png">
-    <link rel="shortcut icon" type="image/png" href="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/683f79739c8223313238dede_XUJTdd67_400x400%20(2).png">
+    <title>Bonk Burn</title>
+    <link rel="icon" type="image/png" href="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/685d6484d29e40fdcdcce826_bonk-doge%20(1).png">
+    <link rel="shortcut icon" type="image/png" href="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/685d6484d29e40fdcdcce826_bonk-doge%20(1).png">
     
     <!-- Firebase SDK -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.23.0/firebase-app-compat.min.js"></script>
@@ -255,10 +255,10 @@
 </head>
 <body>
     <video autoplay muted loop id="bg-video" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: -1;">
-        <source src="https://res.cloudinary.com/dk4bbapud/video/upload/v1748990767/videoplayback_2_t90xh2.mp4" type="video/mp4">
+        <source src="https://res.cloudinary.com/dk4bbapud/video/upload/v1750951388/AdobeStock_609189287_lrzk5k.mp4" type="video/mp4">
     </video>
-    <a href="https://pump.fun/coin/8LNdyq2MUFBXqnWyy5v2GBnbJsofck7XLusSqTy9pump" target="_blank" class="pump-fun-button">
-        <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/67e09302ce2c79cb6daaebcc_Pump_fun_logo%20(2).png" 
+    <a href="https://letsbonk.fun/" target="_blank" class="pump-fun-button">
+        <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/68433c066e047e6e44c898da_1ed8c36b-4a8e-6394-9e58-9a8c204e7b9e.png" 
              alt="Pump.fun" 
              class="pump-fun-logo">
     </a>
@@ -279,7 +279,7 @@
 
     <div class="game-container">
         <div class="pepe-container" id="pepeContainer">
-            <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/683f7964e286d0f5ec1edd4f_XUJTdd67_400x400.png" 
+            <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/685d648460012bd9596b9f8f_bonk-doge%20(1)%20(1).png" 
                  alt="Pepe" 
                  class="pepe-image" 
                  id="pepeImage">
@@ -357,8 +357,8 @@
         const pepeContainer = document.getElementById('pepeContainer');
         const clickCountDisplay = document.getElementById('clickCount');
         
-        const closedMouthImg = 'https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/683f7964e286d0f5ec1edd4f_XUJTdd67_400x400.png';
-        const openMouthImg = 'https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/683f79739c8223313238dede_XUJTdd67_400x400%20(2).png';
+        const closedMouthImg = 'https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/685d648460012bd9596b9f8f_bonk-doge%20(1)%20(1).png';
+        const openMouthImg = 'https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/685d6484d29e40fdcdcce826_bonk-doge%20(1).png';
 
         // Initialize quack audio
         function initQuackAudio() {
