--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
     <div class="header">
         <h1 class="title">BBX6900 | 1 BONK = 1 TOKEN BURNED</h1>
         <div class="counter">
-            Clicks: <span id="clickCount">0</span>
+            Bonks: <span id="clickCount">0</span>
         </div>
     </div>
 
