--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bonk Burn</title>
+    <title>Bonk Burn Index 6900</title>
     <link rel="icon" type="image/png" href="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/685d6484d29e40fdcdcce826_bonk-doge%20(1).png">
     <link rel="shortcut icon" type="image/png" href="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/685d6484d29e40fdcdcce826_bonk-doge%20(1).png">
     
@@ -362,7 +362,7 @@
 
         // Initialize quack audio
         function initQuackAudio() {
-            quackAudio = new Audio('https://raw.githubusercontent.com/webdevgf1/poppepe/main/punch.mp3');
+            quackAudio = new Audio('https://raw.githubusercontent.com/webdevgf1/poppepe/main/bonk.mp3');
             quackAudio.preload = 'auto';
             quackAudio.volume = 0.5;
         }
