--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     <video autoplay muted loop id="bg-video" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: -1;">
         <source src="https://res.cloudinary.com/dk4bbapud/video/upload/v1750952374/videoplayback_3_lb53p8.mp4" type="video/mp4">
     </video>
-    <a href="https://letsbonk.fun/token/BCRv6Ar66TmtMcqSqEgaC73bXDXzVWpbm2uTRFDJbonk/" target="_blank" class="pump-fun-button">
+    <a href="https://letsbonk.fun" target="_blank" class="pump-fun-button">
         <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/68433c066e047e6e44c898da_1ed8c36b-4a8e-6394-9e58-9a8c204e7b9e.png" 
              alt="Pump.fun" 
              class="pump-fun-logo">
